# AA-P2

./: .gitignore  RANDOMIZED_ALGORITHMS_EXAMPLES.md  README.md  SCRIPTS_README.md  TESTING_GUIDE.md  check_project.sh  main.py  pyproject.toml  quick_test.sh  run_all_random_tests.sh  run_complete_experiments.sh
docs/report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
experiments/analysis/: complexity_analysis.json  complexity_table.tex
experiments/graphs2/: graph_n100_d12.graphml  graph_n100_d25.graphml  graph_n100_d50.graphml  graph_n100_d75.graphml  graph_n10_d12.graphml  graph_n10_d25.graphml  graph_n10_d50.graphml  graph_n10_d75.graphml  graph_n11_d12.graphml  graph_n11_d25.graphml  graph_n11_d50.graphml  graph_n11_d75.graphml  graph_n12_d12.graphml  graph_n12_d25.graphml  graph_n12_d50.graphml  graph_n12_d75.graphml  graph_n13_d12.graphml  graph_n13_d25.graphml  graph_n13_d50.graphml  graph_n13_d75.graphml  graph_n14_d12.graphml  graph_n14_d25.graphml  graph_n14_d50.graphml  graph_n14_d75.graphml  graph_n15_d12.graphml  graph_n15_d25.graphml  graph_n15_d50.graphml  graph_n15_d75.graphml  graph_n16_d12.graphml  graph_n16_d25.graphml  graph_n16_d50.graphml  graph_n16_d75.graphml  graph_n17_d12.graphml  graph_n17_d25.graphml  graph_n17_d50.graphml  graph_n17_d75.graphml  graph_n18_d12.graphml  (+351 more)
resources/: Exporta_o_seguinte_relatorio_gerado_pelo_notebook....md
scripts/: select_zenodo_graphs.py
src/: algorithms.py  benchmark.py  complexity_analysis.py  graph_generator.py  graph_loader.py  visualizer.py
(+139 files in other folders)
