[project]
name = "projeto2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "networkx[default]>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.5",
    "ty>=0.0.1a23",
    "typer>=0.20.0",
    "types-networkx>=3.5.0.20251001",
]

[dependency-groups]
dev = [
    "pip>=25.2",
]
